# Astra_RM_Platform

./: .clangd  .gitignore  CLAUDE.md  README.md
Platform_Refactor/skeleton/robot_platform/: CMakeLists.txt
Platform_Refactor/skeleton/robot_platform/runtime/: README.md
robot_platform/: CMakeLists.txt  README.md
robot_platform/cmake/: README.md
robot_platform/cmake/linker/: stm32h723_flash.ld
robot_platform/cmake/toolchains/: arm-none-eabi-gcc.cmake  linux-gcc.cmake
robot_platform/docs/: README.md  app_layer_architecture_research.md  balance_chassis_bringup.md  chassis_import_manifest.md  generated_import_rules.md  parameter_partition_refactor.md  phase0_codegen_first.md  phase1_bootstrap.md  phase2_hw_seed.md  platform_architecture.md  project_overview_and_target_architecture.md  project_roles_and_scope.md  ros_robot_algorithm_placement_research.md  runtime_architecture_blueprint.md  runtime_architecture_task_list.md  runtime_capability_boundaries.md  runtime_communication_matrix.md  runtime_contracts_draft.md  runtime_file_migration_map.md  runtime_migration_stages.md  runtime_realignment_plan.md  sim_architecture_research.md  wsl_environment_setup.md
robot_platform/projects/: README.md
robot_platform/projects/balance_chassis/: README.md  board.yaml  project.yaml
robot_platform/runtime/: README.md
robot_platform/runtime/app/: README.md
robot_platform/runtime/app/balance_chassis/: INS_task.c  REFACTOR_GUIDE.md  chassis_task.c  chassis_task.h  freertos_legacy.c  ins_task.h  motor_control_task.c  motor_control_task.h  observe_task.c  observe_task.h  remote_control.c  remote_control.h  remote_task.c  remote_task.h  robot_def.h
robot_platform/runtime/app/balance_chassis_seed/: README.md  legacy_seed_state.c  legacy_seed_state.h
robot_platform/runtime/bsp/: README.md  ports.h  ports_fake.c  ports_fake.h
robot_platform/runtime/bsp/sitl/: BMI088driver_sitl.c  FreeRTOSConfig.h  bsp_PWM_sitl.c  bsp_dwt_sitl.c  bsp_ports_sitl.c  can_bsp_sitl.c  cmsis_gcc.h  dm4310_drv_sitl.c  hal_stub.c  main_sitl.c  remote_control_sitl.c
robot_platform/runtime/control/: README.md  readiness.c  readiness.h  topics.h
robot_platform/runtime/control/constraints/: README.md  actuator_constraints.c  actuator_constraints.h
robot_platform/runtime/control/contracts/: actuator_command.h  device_command.h  device_feedback.h  device_input.h  robot_intent.h  robot_state.h  runtime_contract_common.h  runtime_contracts.h
robot_platform/runtime/control/control_config/: control_task_params.h
robot_platform/runtime/control/controllers/: README.md  balance_controller.c  balance_controller.h  chassis_control_task.c  chassis_control_task.h
robot_platform/runtime/control/execution/: README.md  actuator_gateway.c  actuator_gateway.h  actuator_topics.c  actuator_topics.h  motor_control_task.c  motor_control_task.h
robot_platform/runtime/control/internal/: balance_params.h  balance_runtime.h  ins_runtime.h  runtime_state.h
robot_platform/runtime/control/primitives/: README.md  control_math.h
robot_platform/runtime/control/state/: README.md  chassis_observe_message.h  chassis_observer.c  chassis_observer.h  ins_state_estimator.c  ins_state_estimator.h  ins_state_message.h  ins_task.c  ins_task.h  ins_topics.c  ins_topics.h  observe_task.c  observe_task.h  observe_topics.c  observe_topics.h
robot_platform/runtime/control/task_registry/: control_task_registry.c  control_task_registry.h
robot_platform/runtime/device/: README.md  device_backend.h  device_backend_hw.c  device_backend_sitl.c  device_layer.c  device_layer.h  device_profile.h  device_profile_hw.c  device_profile_sitl.c  device_types.h
robot_platform/runtime/device/actuator/: README.md  actuator_device.h
robot_platform/runtime/device/imu/: README.md  bmi088_device.h  bmi088_device_hw.c  bmi088_device_sitl.c  imu_device.h
robot_platform/runtime/device/internal/: device_backend_profiles.h
robot_platform/runtime/device/remote/: README.md  dbus_remote_device.h  dbus_remote_device_hw.c  dbus_remote_device_sitl.c  remote_device.h
robot_platform/runtime/module/: README.md
robot_platform/runtime/module/lib/: basic_types.h  user_lib.h
robot_platform/runtime/module/message_center/: message_center.c  message_center.h
robot_platform/runtime/osal/: README.md
robot_platform/runtime/runtime_service/: README.md
robot_platform/runtime/runtime_service/actuator/: README.md  actuator_runtime.h  actuator_topics.c  actuator_topics.h  motor_control_task.c  motor_control_task.h
robot_platform/runtime/runtime_service/control_runtime/: README.md  chassis_control_support.h
robot_platform/runtime/runtime_service/observe/: README.md  observe_orchestration.c  observe_orchestration.h  observe_runtime.h  observe_task.c  observe_task.h  observe_topics.c  observe_topics.h
robot_platform/runtime/runtime_service/sensing/: INS_task.c  README.md  ins_runtime.c  ins_runtime.h  ins_topics.h
robot_platform/runtime/tests/host/: test_actuator_gateway.c  test_balance_app_startup.c  test_balance_safety_path.c  test_bsp_ports_compile.c  test_device_profile_safety_seams.c  (+7 more)
robot_platform/sim/: README.md  runner.py  runtime_io.py
robot_platform/sim/adapters/: README.md
robot_platform/sim/backends/: sitl_bridge.py  sitl_contract.py
robot_platform/sim/bridge/: protocol.py  sim_bridge.py
robot_platform/sim/core/: __init__.py  profile.py  protocol.py  runner.py
robot_platform/sim/physics/: README.md  runner.py  simple_balance.py
robot_platform/sim/projects/: __init__.py
robot_platform/sim/replay/: README.md
robot_platform/sim/reports/: README.md  push_recovery.json  report_writer.py  standstill.json  tilt_recovery.json
robot_platform/sim/scenarios/: README.md  push_recovery.yaml  standstill.yaml  tilt_recovery.yaml
robot_platform/sim/tests/: test_runner.py
robot_platform/tools/: README.md
robot_platform/tools/codegen/: README.md
robot_platform/tools/cubemx_backend/: README.md  main.py
robot_platform/tools/platform_cli/: README.md  __init__.py  main.py
robot_platform/tools/schema/: README.md  project.schema.yaml
(+315 files in other folders)
